Shivi | add integration test